src/styles/components/_detailed-list.scss
@import '../mixins';
.mynah-detailed-list {
    display: flex;
    box-sizing: border-box;
    background-color: var(--mynah-card-bg);
    border-radius: var(--mynah-card-radius);
    width: 100%;
    pointer-events: all;
    flex-flow: column nowrap;
    align-items: stretch;
    justify-content: flex-start;
    max-height: 80vh;
    overflow: hidden;
    padding: var(--mynah-sizing-3);
    gap: var(--mynah-sizing-3);
    pointer-events: all;

    > .mynah-detailed-list-header-wrapper {
        flex-shrink: 0;

        > .mynah-ui-title-description-icon-wrapper {
            > .mynah-ui-title-description-icon-icon {
                font-size: var(--mynah-font-size-large);
                color: var(--mynah-color-text-strong);
            }
            > .mynah-ui-title-description-icon-title {
                font-size: var(--mynah-font-size-large);
                color: var(--mynah-color-text-strong);
                font-weight: 600;
            }
            > .mynah-ui-title-description-icon-description {
                font-size: var(--mynah-font-size-medium);
                color: var(--mynah-color-text-weak);
            }
        }
        &:empty {
            display: none;
        }
    }
    > .mynah-detailed-list-filters-wrapper {
        flex-shrink: 0;
        &:empty {
            display: none;
        }
        .mynah-ui-form-item-mandatory-title {
            display: none;
        }
        > .mynah-chat-item-form-items-container {
            gap: var(--mynah-sizing-3);
        }
    }
    > .mynah-detailed-list-item-groups-wrapper {
        flex: 1;
        display: flex;
        box-sizing: border-box;
        width: 100%;
        pointer-events: all;
        flex-flow: column nowrap;
        align-items: stretch;
        justify-content: flex-start;
        overflow-x: hidden;
        overflow-y: auto;
        &:empty {
            display: none;
        }

        > .mynah-detailed-list-group {
            display: flex;
            box-sizing: border-box;
            width: 100%;
            flex-flow: column nowrap;
            align-items: stretch;
            justify-content: flex-start;
            gap: var(--mynah-border-width);
            font-size: var(--mynah-font-size-medium);
            background-color: inherit;
            > .mynah-detailed-list-group-title {
                margin: 0;
                color: var(--mynah-color-text-strong);
                padding: 0 var(--mynah-sizing-3);
                margin-bottom: var(--mynah-sizing-1);
                position: relative;
                border-radius: var(--mynah-input-radius);
                overflow: hidden;
                display: flex;
                align-items: center;
                align-items: baseline;
                gap: var(--mynah-sizing-2);
                > .mynah-card-body {
                    flex: 1;
                    * {
                        margin: 0;
                        padding-bottom: 0 !important;
                    }
                }
                > .mynah-chat-item-buttons-container > .mynah-button {
                    height: var(--mynah-sizing-6);
                    min-width: var(--mynah-sizing-6);
                    padding: var(--mynah-sizing-1);
                }
            }

            & + .mynah-detailed-list-group {
                margin-top: var(--mynah-sizing-2);
                padding-top: var(--mynah-sizing-4);
                border-top: var(--mynah-border-width) solid var(--mynah-color-border-default);
            }

            > .mynah-detailed-list-items-block {
                display: block;
                overflow: hidden;
                content-visibility: auto;
                contain-intrinsic-size: auto calc(3 * var(--mynah-line-height));
                > .mynah-detailed-list-item {
                    display: flex;
                    gap: var(--mynah-sizing-half);
                    position: relative;
                    box-sizing: border-box;
                    width: 100%;
                    flex-flow: row nowrap;
                    align-items: center;
                    justify-content: flex-start;
                    overflow: hidden;
                    cursor: pointer;
                    padding: calc(var(--mynah-sizing-2) + var(--mynah-sizing-half));
                    color: var(--mynah-color-text-default);
                    border-radius: var(--mynah-input-radius);
                    transition: var(--mynah-short-transition-rev);
                    background-color: inherit;
                    margin-bottom: var(--mynah-sizing-half);

                    &[disabled='true'] {
                        &::before {
                            border-color: transparent !important;
                        }
                        opacity: 0.5;
                        &,
                        & * {
                            pointer-events: none;
                        }
                    }
                    &:hover:not([disabled='true']),
                    &.target-command:not([disabled='true']) {
                        background-color: var(--mynah-color-button);
                        &,
                        & * {
                            color: var(--mynah-color-button-reverse);
                            .mynah-detailed-list-item-description {
                                color: var(--mynah-color-button-reverse);
                                opacity: 0.65;
                            }
                        }
                    }
                    > .mynah-detailed-list-icon {
                        flex-shrink: 0;
                        padding-right: var(--mynah-sizing-2);
                        > .mynah-ui-icon {
                            font-size: var(--mynah-font-size-large);
                        }
                        color: var(--mynah-color-text-default);
                    }

                    > .mynah-detailed-list-item-name {
                        flex-shrink: 0;
                        font-family: var(--mynah-font-family);
                        font-weight: bold;
                        > mark {
                            position: relative;
                            color: initial !important;
                            overflow: hidden;
                        }
                    }

                    > .mynah-detailed-list-item-description {
                        flex-grow: 1;
                        flex-shrink: 1;
                        color: var(--mynah-color-text-weak);
                        font-size: var(--mynah-font-size-small);
                        display: flex;
                        overflow: hidden;
                        justify-content: flex-start;
                        background-color: inherit;
                        display: inline-block;
                        white-space: nowrap;
                        direction: rtl;
                        text-align: left;
                        text-overflow: ellipsis;
                        padding-left: var(--mynah-sizing-1);
                        padding-right: var(--mynah-sizing-1);
                    }

                    > .mynah-detailed-list-item-arrow-icon {
                        flex-shrink: 0;
                        color: var(--mynah-color-text-weak);
                        font-size: var(--mynah-font-size-small);
                    }
                }
            }
        }
    }

    &:hover
        > .mynah-detailed-list-item-groups-wrapper
        > .mynah-detailed-list-group
        > .mynah-detailed-list-items-block
        > .mynah-detailed-list-item {
        &.target-command:not([disabled='true']):not(:hover) {
            background-color: inherit;
            &:before {
                content: '';
                position: absolute;
                top: 0;
                left: 0;
                box-sizing: border-box;
                width: 100%;
                height: 100%;
                border: solid var(--mynah-button-border-width) var(--mynah-color-button);
                border-radius: inherit;
            }
            &,
            & * {
                color: var(--mynah-color-text-default);
            }
        }
    }
}

